While implementing analysis part

--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -2,53 +2,80 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
+    "import os, logging\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import logging\n",
     "from tqdm import tqdm\n",
     "import subprocess\n",
-    "import vcfpy"
+    "import vcfpy\n",
+    "\n",
+    "from helpers import get_ip_address, has_write_permission"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = \"/project/datacamp/team11/data\"\n",
-    "output_path = os.path.join(data_path, \"preprocessed\")\n",
-    "sample_annotation_file = os.path.join(data_path, \"igsr-1000 genomes 30x on grch38.tsv\")\n",
-    "chr_list = [str(x) for x in range(1,23)]\n",
-    "gt_dict = {\"0|0\" :0, \"0|1\" : 1, \"1|0\" : 2, \"1|1\" : 3 } # genotype dict for converting string-> inteter \n",
+    "data_locations = {\n",
+    "    '223.195.111.48': '/project/datacamp/team11/data',\n",
+    "    '147.47.44.229': '/home/jinhyun/data/1kGP',\n",
+    "}\n",
     "\n",
-    "if not os.path.exists(output_path):\n",
-    "    os.makedirs(output_path)"
+    "chr_list = [str(x) for x in range(1,23)]\n",
+    "gt_dict = {\"0|0\" :0, \"0|1\" : 1, \"1|0\" : 2, \"1|1\" : 3 } # genotype dict for converting string-> inteter "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Validation checks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_path = data_locations.get(get_ip_address(), '/not_found')\n",
+    "sample_annotation_file = os.path.join(data_path, \"igsr-1000 genomes 30x on grch38.tsv\")\n",
+    "output_path = os.path.join(data_path, \"preprocessed\")\n",
+    "\n",
+    "assert os.path.exists(data_path), f\"Data path not exists: {data_path} OR IP setting is incorrect: {get_ip_address()}\"\n",
+    "assert os.path.isfile(sample_annotation_file), f\"File not exists : {sample_annotation_file}\"\n",
+    "assert has_write_permission(data_path), f\"You do not have write permission for {data_path}\"\n",
+    "\n",
+    "if not os.path.exists(output_path):\n",
+    "    os.makedirs(output_path)\n",
+    "\n",
+    "assert has_write_permission(output_path), f\"You do not have write permission for {output_path}\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def count_vcf_line_count(filename):\n",
     "    cmd = f\"grep -v '^#' {filename} | wc -l\"\n",
     "    result = subprocess.run(cmd, shell=True, text=True, capture_output=True)\n",
-    "    return int(result.stdout.strip())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return int(result.stdout.strip())\n",
+    "\n",
     "def preprocess_vcf(vcf_file_name, sample_annotation_file, output_file_prefix):\n",
     "    vcf_line_count = count_vcf_line_count(vcf_file_name)\n",
     "    print(f\"----- processing {vcf_file_name} file with {vcf_line_count} variants -----\")\n",
@@ -118,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +159,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4889/4889 [00:46<00:00, 105.06it/s]\n"
+      "100%|██████████| 4889/4889 [00:46<00:00, 106.22it/s]"
      ]
     },
     {
@@ -143,6 +170,13 @@
       "genotype matrix shape (#samples, #features) : (3202, 4243) -> saved to /project/datacamp/team11/data/preprocessed/chrT_matrix.npy\n",
       "sample annotations (#samples, ) : (3202, 9)\n",
       "variant info dataframe (#features, ): (4243, 4) -> saved to /project/datacamp/team11/data/preprocessed/chrT_variant.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -198,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
