--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -6,25 +6,74 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
+    "import os, logging\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import logging\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "\n",
+    "from helpers import get_ip_address, has_write_permission"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = \"/project/datacamp/team11/data/preprocessed\"\n",
-    "sample_annotation_file = os.path.join(data_path, \"..\", \"igsr-1000 genomes 30x on grch38.tsv\")\n",
-    "chr_list = [str(x) for x in range(1,23)]\n",
-    "gt_dict = {\"0|0\" :0, \"0|1\" : 1, \"1|0\" : 2, \"1|1\" : 3 } # genotype dict for converting string-> inteter \n",
+    "data_locations = {\n",
+    "    '223.195.111.48': '/project/datacamp/team11/data',\n",
+    "    '147.47.44.229': '/home/jinhyun/data/1kGP',\n",
+    "}\n",
     "\n",
-    "sample_annotation = pd.read_csv(sample_annotation_file, sep=\"\\t\")"
+    "chr_list = [str(x) for x in range(1,23)]\n",
+    "gt_dict = {\"0|0\" :0, \"0|1\" : 1, \"1|0\" : 2, \"1|1\" : 3 } # genotype dict for converting string-> inteter "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Validation checks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_data_path = data_locations.get(get_ip_address(), '/not_found')\n",
+    "sample_annotation_file = os.path.join(raw_data_path, \"igsr-1000 genomes 30x on grch38.tsv\")\n",
+    "preprocess_path = os.path.join(raw_data_path, \"preprocessed\")\n",
+    "\n",
+    "assert os.path.exists(preprocess_path), f\"Data path not exists: {raw_data_path} OR IP setting is incorrect: {get_ip_address()}\"\n",
+    "assert os.path.isfile(sample_annotation_file), f\"File not exists : {sample_annotation_file}\"\n",
+    "assert has_write_permission(preprocess_path), f\"You do not have write permission for {preprocess_path}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Read sample annotation info with shape : (3202, 9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_annotation = pd.read_csv(sample_annotation_file, sep=\"\\t\")\n",
+    "print(f\"Read sample annotation info with shape : {sample_annotation.shape}\")"
    ]
   },
   {
@@ -56,7 +105,7 @@
     "\n",
     "\n",
     "#for chr in chr_list:\n",
-    "#    read_data(output_path, f\"chr{chr}\")\n"
+    "#    read_data(preprocess_path, f\"chr{chr}\")\n"
    ]
   },
   {
@@ -92,7 +141,7 @@
     }
    ],
    "source": [
-    "gt_mat, variant_info_df = read_data(data_path, f\"chr22\")\n",
+    "gt_mat, variant_info_df = read_data(preprocess_path, f\"chr22\")\n",
     "\n",
     "print(f\"genotype matrix shape (#samples, #features) : {gt_mat.shape}\")\n",
     "print(f\"sample annotations (#samples, ) : {sample_annotation.shape}\")\n",
@@ -209,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
