Implemented analysis part

--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -13,7 +13,7 @@
     "import subprocess\n",
     "import vcfpy\n",
     "\n",
-    "from helpers import get_ip_address, has_write_permission"
+    "from helpers import get_ip_address, has_write_permission, save_preprocessed_data"
    ]
   },
   {
@@ -122,18 +122,11 @@
     "    indices_for_sort_sample = [sample_name_to_idx[name] for name in sample_annotation[\"Sample name\"]]\n",
     "\n",
     "    gt_mat = gt_mat_raw[:status_counter[\"total_meaningful_snps\"], :].transpose()[indices_for_sort_sample,:]\n",
-    "    #variant_info_df = pd.DataFrame(variant_info_list, columns=variant_info_header)\n",
     "    variant_info_df = variant_info_df_raw.iloc[:status_counter[\"total_meaningful_snps\"]]\n",
     "\n",
-    "\n",
-    "    numpy_save_file_name = f\"{output_file_prefix}_matrix.npy\"\n",
-    "    pandas_save_file_name = f\"{output_file_prefix}_variant.csv\"\n",
-    "    print(f\"genotype matrix shape (#samples, #features) : {gt_mat.shape} -> saved to {numpy_save_file_name}\")\n",
+    "    save_preprocessed_data(gt_mat, variant_info_df, output_file_prefix)\n",
     "    print(f\"sample annotations (#samples, ) : {sample_annotation.shape}\")\n",
-    "    print(f\"variant info dataframe (#features, ): {variant_info_df.shape} -> saved to {pandas_save_file_name}\")\n",
-    "\n",
-    "    np.save(numpy_save_file_name, gt_mat)\n",
-    "    variant_info_df.to_csv(pandas_save_file_name, sep=\",\", index = False)"
+    "\n"
    ]
   },
   {
@@ -152,14 +145,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "----- processing /project/datacamp/team11/data/test.vcf file with 4889 variants -----\n"
+      "----- processing /home/jinhyun/data/1kGP/test.vcf file with 4889 variants -----\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4889/4889 [00:46<00:00, 106.22it/s]"
+      "100%|██████████| 4889/4889 [01:33<00:00, 52.43it/s]\n"
      ]
     },
     {
@@ -167,16 +160,9 @@
      "output_type": "stream",
      "text": [
       "{'total_variant': 4889, 'total_snps': 4243, 'total_meaningful_snps': 4243}\n",
-      "genotype matrix shape (#samples, #features) : (3202, 4243) -> saved to /project/datacamp/team11/data/preprocessed/chrT_matrix.npy\n",
-      "sample annotations (#samples, ) : (3202, 9)\n",
-      "variant info dataframe (#features, ): (4243, 4) -> saved to /project/datacamp/team11/data/preprocessed/chrT_variant.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "genotype matrix shape (#samples, #features) : (3202, 4243) -> saved to /home/jinhyun/data/1kGP/preprocessed/chrT_matrix.npy\n",
+      "variant info dataframe (#features, ): (4243, 4) -> saved to /home/jinhyun/data/1kGP/preprocessed/chrT_variant.csv\n",
+      "sample annotations (#samples, ) : (3202, 9)\n"
      ]
     }
    ],
