--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -197,7 +197,7 @@
     }
    ],
    "source": [
-    "snp_dataset.filter_variant(supporting_count_filter)"
+    "snp_dataset.filter_variant(supporting_count_filter, inplace = True)"
    ]
   },
   {
