implemeted measure_performance

--- a/train.ipynb
+++ b/train.ipynb
@@ -10,40 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "cb932510",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Thu Feb  8 01:41:38 2024       \n",
-      "+-----------------------------------------------------------------------------+\n",
-      "| NVIDIA-SMI 525.147.05   Driver Version: 525.147.05   CUDA Version: 12.0     |\n",
-      "|-------------------------------+----------------------+----------------------+\n",
-      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
-      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
-      "|                               |                      |               MIG M. |\n",
-      "|===============================+======================+======================|\n",
-      "|   0  NVIDIA GeForce ...  Off  | 00000000:01:00.0 Off |                  Off |\n",
-      "|  0%   32C    P8    24W / 450W |     71MiB / 24564MiB |      0%      Default |\n",
-      "|                               |                      |                  N/A |\n",
-      "+-------------------------------+----------------------+----------------------+\n",
-      "                                                                               \n",
-      "+-----------------------------------------------------------------------------+\n",
-      "| Processes:                                                                  |\n",
-      "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
-      "|        ID   ID                                                   Usage      |\n",
-      "|=============================================================================|\n",
-      "|    0   N/A  N/A      1611      G   /usr/lib/xorg/Xorg                 56MiB |\n",
-      "|    0   N/A  N/A      1762      G   /usr/bin/gnome-shell               12MiB |\n",
-      "+-----------------------------------------------------------------------------+\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!nvidia-smi"
    ]
@@ -58,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b86801ee",
    "metadata": {},
    "outputs": [],
@@ -82,7 +54,7 @@
     "import os, logging\n",
     "from tqdm import tqdm\n",
     "import time\n",
-    "from helpers import get_ip_address, has_write_permission, save_preprocessed_data, read_preprocessed_data\n",
+    "from helpers import get_ip_address, has_write_permission, measure_performance, save_preprocessed_data, read_preprocessed_data\n",
     "\n",
     "import warnings\n",
     "# 경고 메시지 무시\n",
@@ -99,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "dde3c6a0",
    "metadata": {},
    "outputs": [],
@@ -115,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b343892b",
    "metadata": {},
    "outputs": [],
@@ -131,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "46daeca1",
    "metadata": {},
    "outputs": [
@@ -149,35 +121,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a7cddc9-986e-414f-ab8c-697a0960c8c4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# sample_annotation_df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "683d6de1-4af3-424b-9ad3-77bc28f5dfca",
-   "metadata": {},
-   "source": [
-    "## Superpopulation code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f23d490",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# continent = sample_annotation_df['Superpopulation code']\n",
-    "# continent"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "fc103b5f-080c-4d9b-b84c-80f5f1ab27d0",
    "metadata": {},
@@ -187,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "129145a6-1923-4fef-88ad-90f066e2854e",
    "metadata": {},
    "outputs": [
@@ -215,7 +158,7 @@
        "Name: Population code, Length: 3201, dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,141 +186,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "fea0dd5e-1e62-4fd1-9896-ccc929598c00",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
-   "source": [
-    "## 3.1 merged_random_100_matrix"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ef0ab7ad-89f9-457a-9201-d3e8b7a7f4a6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "npy_path = '/project/datacamp/team11/data/preprocessed/merged_random_100_matrix.npy'\n",
-    "data = np.load(npy_path)\n",
-    "\n",
-    "X = data\n",
-    "y = continent"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5fef1628-37eb-4977-ae77-e956840b2573",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
-   "source": [
-    "## 3.2 merged_random_1k_matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69da4e9f-620f-4bff-ba14-0e45902c07b1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "npy_path = '/project/datacamp/team11/data/preprocessed/merged_random_1k_matrix.npy'\n",
-    "data = np.load(npy_path)\n",
-    "\n",
-    "X = data\n",
-    "y = continent"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4d2ebfad-4977-4ea5-be95-e272ddd1eecd",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
-   "source": [
-    "## 3.3 merged_random_10k_matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "6dd20be9-9a75-4d24-809e-30c56a57cf00",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "npy_path = '/project/datacamp/team11/data/preprocessed/merged_random_10k_annotated_matrix.npy'\n",
-    "data = np.load(npy_path)\n",
-    "\n",
-    "X = data\n",
-    "y = continent"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cd201524-ee03-4d9c-b64f-9f525bb6d7aa",
-   "metadata": {},
-   "source": [
-    "## 3.4 merged_random_100k_matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37475d0e-14d0-4f98-af44-8c4b03022465",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "npy_path = '/project/datacamp/team11/data/preprocessed/merged_random_100k_matrix.npy'\n",
-    "data = np.load(npy_path)\n",
-    "\n",
-    "X = data\n",
-    "y = continent"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "770982e4-c178-42c7-89ff-23fb3e3e9955",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
-   "source": [
-    "## 3.5 merged_random_1M_matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "62afb4af-5074-4e27-8f3f-4feff137309d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "npy_path = '/project/datacamp/team11/data/preprocessed/merged_random_1M_matrix.npy'\n",
-    "data = np.load(npy_path)\n",
-    "\n",
-    "X = data\n",
-    "y = continent"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "87bed57e-e446-4d5d-a774-2d447d04a7d0",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
-   "source": [
-    "## 3.6 merged_zerofilter_0.0005_matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b9fa616f-ecfb-4127-86f3-a188e2fc62b8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "npy_path = '/project/datacamp/team11/data/preprocessed/merged_zerofilter_0.0005_matrix.npy'\n",
+    "npy_path = os.path.join(preprocess_path, 'merged_support3_variance_0.24995_matrix.npy')\n",
     "data = np.load(npy_path)\n",
     "\n",
     "X = data\n",
@@ -394,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "id": "e5ef4254-6fe2-4dd7-ab58-e07ecbbb7ca8",
    "metadata": {},
    "outputs": [
@@ -402,14 +217,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 4 0 ... 8 0 7]\n",
-      " [0 4 0 ... 8 0 7]\n",
-      " [0 4 0 ... 8 0 7]\n",
+      "[[2 2 3 ... 1 0 3]\n",
+      " [1 0 3 ... 1 1 3]\n",
+      " [1 0 3 ... 2 0 3]\n",
       " ...\n",
-      " [0 4 0 ... 8 0 7]\n",
-      " [0 4 0 ... 8 0 7]\n",
-      " [0 4 0 ... 8 0 7]]\n",
-      "(3201, 20000)\n"
+      " [3 1 1 ... 1 3 0]\n",
+      " [3 0 3 ... 3 2 1]\n",
+      " [2 1 3 ... 2 1 3]]\n",
+      "(3201, 108947)\n"
      ]
     }
    ],
@@ -429,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "11a3cd9e",
    "metadata": {
     "scrolled": true
@@ -439,14 +254,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 4 0 ... 8 0 7]\n",
-      " [0 4 0 ... 8 0 7]\n",
-      " [0 4 0 ... 8 0 7]\n",
+      "[[2 2 3 ... 1 0 3]\n",
+      " [1 0 3 ... 1 1 3]\n",
+      " [1 0 3 ... 2 0 3]\n",
       " ...\n",
-      " [0 4 0 ... 8 0 7]\n",
-      " [0 4 0 ... 8 0 7]\n",
-      " [0 4 0 ... 8 0 7]]\n",
-      "(3201, 20000)\n",
+      " [3 1 1 ... 1 3 0]\n",
+      " [3 0 3 ... 3 2 1]\n",
+      " [2 1 3 ... 2 1 3]]\n",
+      "(3201, 108947)\n",
       "0       FIN\n",
       "1       FIN\n",
       "2       FIN\n",
@@ -480,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "id": "ecdd8a8f",
    "metadata": {},
    "outputs": [],
@@ -492,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "id": "5415a2d5-0601-423a-9715-eb8e3f6ab2c4",
    "metadata": {},
    "outputs": [
@@ -500,8 +315,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2560, 20000)\n",
-      "(641, 20000)\n",
+      "(2560, 108947)\n",
+      "(641, 108947)\n",
       "561     MSL\n",
       "282     IBS\n",
       "1465    PUR\n",
@@ -586,61 +401,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "id": "9732522e-9aa7-431f-a3a8-ab0589ddf96e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@measure_performance\n",
+    "def do_svm_train():\n",
+    "    best_params = {'C': 1, 'gamma': 0.01, 'kernel': 'linear'} # 100\n",
+    "    previous_best_params = {'C': 10, 'gamma': 0.01, 'kernel': 'rbf'} # 1k\n",
+    "    previous_best_params = {'C': 0.1, 'gamma': 0.01, 'kernel': 'linear'} \n",
+    "    svm_model = SVC(**previous_best_params)\n",
+    "\n",
+    "    start_time = time.time()\n",
+    "\n",
+    "    svm_model.fit(X_train, y_train)\n",
+    "\n",
+    "    fitting_end_time = time.time()\n",
+    "\n",
+    "    y_pred = svm_model.predict(X_test)\n",
+    "\n",
+    "    end_time = time.time()\n",
+    "\n",
+    "    fitting_elapsed_time = fitting_end_time - start_time\n",
+    "    prediction_elapsed_time = end_time - fitting_end_time\n",
+    "\n",
+    "    fitting_minutes = int(fitting_elapsed_time // 60)\n",
+    "    fitting_seconds = int(fitting_elapsed_time % 60)\n",
+    "\n",
+    "    prediction_minutes = int(prediction_elapsed_time // 60)\n",
+    "    prediction_seconds = int(prediction_elapsed_time % 60)\n",
+    "\n",
+    "    start_time_formatted = time.strftime(\"%Y-%m-%d %H:%M:%S\", time.localtime(start_time))\n",
+    "    fitting_end_time_formatted = time.strftime(\"%Y-%m-%d %H:%M:%S\", time.localtime(fitting_end_time))\n",
+    "    end_time_formatted = time.strftime(\"%Y-%m-%d %H:%M:%S\", time.localtime(end_time))\n",
+    "\n",
+    "    print(f\"Start time: {start_time_formatted}\")\n",
+    "    print(f\"Model fitting end time: {fitting_end_time_formatted}\")\n",
+    "    print(f\"End time: {end_time_formatted}\")\n",
+    "    print(f\"Total model fitting time: {fitting_minutes} minutes {fitting_seconds} seconds\")\n",
+    "    print(f\"Total prediction time: {prediction_minutes} minutes {prediction_seconds} seconds\")\n",
+    "\n",
+    "    end_time = time.time()\n",
+    "    elapsed_time_seconds = end_time - start_time\n",
+    "\n",
+    "    print(f\"Total model fitting and prediction time: {elapsed_time_seconds} seconds\")\n",
+    "    return y_pred\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "78f7e929",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start time: 2024-02-08 01:54:00\n",
-      "Model fitting end time: 2024-02-08 01:54:37\n",
-      "End time: 2024-02-08 01:54:47\n",
-      "Total model fitting time: 0 minutes 36 seconds\n",
-      "Total prediction time: 0 minutes 10 seconds\n"
+      "Start time: 2024-02-23 15:24:31\n",
+      "Model fitting end time: 2024-02-23 15:28:17\n",
+      "End time: 2024-02-23 15:29:01\n",
+      "Total model fitting time: 3 minutes 45 seconds\n",
+      "Total prediction time: 0 minutes 43 seconds\n",
+      "Total model fitting and prediction time: 269.2782483100891 seconds\n",
+      "Function: do_svm_train\n",
+      "CPU Time: 281.6687 minutes\n",
+      "Physical Time: 4.4886 minutes\n",
+      "Memory Usage: 5.3286 GiB\n"
      ]
     }
    ],
    "source": [
-    "best_params = {'C': 1, 'gamma': 0.01, 'kernel': 'linear'} # 100\n",
-    "previous_best_params = {'C': 10, 'gamma': 0.01, 'kernel': 'rbf'} # 1k\n",
-    "previous_best_params = {'C': 0.1, 'gamma': 0.01, 'kernel': 'linear'} \n",
-    "svm_model = SVC(**previous_best_params)\n",
-    "\n",
-    "start_time = time.time()\n",
-    "\n",
-    "svm_model.fit(X_train, y_train)\n",
-    "\n",
-    "fitting_end_time = time.time()\n",
-    "\n",
-    "y_pred = svm_model.predict(X_test)\n",
-    "\n",
-    "end_time = time.time()\n",
-    "\n",
-    "fitting_elapsed_time = fitting_end_time - start_time\n",
-    "prediction_elapsed_time = end_time - fitting_end_time\n",
-    "\n",
-    "fitting_minutes = int(fitting_elapsed_time // 60)\n",
-    "fitting_seconds = int(fitting_elapsed_time % 60)\n",
-    "\n",
-    "prediction_minutes = int(prediction_elapsed_time // 60)\n",
-    "prediction_seconds = int(prediction_elapsed_time % 60)\n",
-    "\n",
-    "start_time_formatted = time.strftime(\"%Y-%m-%d %H:%M:%S\", time.localtime(start_time))\n",
-    "fitting_end_time_formatted = time.strftime(\"%Y-%m-%d %H:%M:%S\", time.localtime(fitting_end_time))\n",
-    "end_time_formatted = time.strftime(\"%Y-%m-%d %H:%M:%S\", time.localtime(end_time))\n",
-    "\n",
-    "print(f\"Start time: {start_time_formatted}\")\n",
-    "print(f\"Model fitting end time: {fitting_end_time_formatted}\")\n",
-    "print(f\"End time: {end_time_formatted}\")\n",
-    "print(f\"Total model fitting time: {fitting_minutes} minutes {fitting_seconds} seconds\")\n",
-    "print(f\"Total prediction time: {prediction_minutes} minutes {prediction_seconds} seconds\")\n"
+    "y_pred = do_svm_train()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "id": "161d6b32-d49d-4250-bdd3-a4ceb5b54ad6",
    "metadata": {},
    "outputs": [
@@ -648,15 +486,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total model fitting and prediction time: 47.265421628952026 seconds\n"
+      "Start time: 2024-02-23 15:23:00\n",
+      "Model fitting end time: 2024-02-23 15:23:40\n",
+      "End time: 2024-02-23 15:23:51\n",
+      "Total model fitting time: 0 minutes 39 seconds\n",
+      "Total prediction time: 0 minutes 11 seconds\n",
+      "Total model fitting and prediction time: 51.17019701004028 seconds\n",
+      "Function: do_svm_train\n",
+      "CPU Time: 0.8532 minutes\n",
+      "Physical Time: 0.8533 minutes\n",
+      "Memory Usage: 0.5287 GiB\n"
      ]
     }
    ],
    "source": [
-    "end_time = time.time()\n",
-    "elapsed_time_seconds = end_time - start_time\n",
-    "\n",
-    "print(f\"Total model fitting and prediction time: {elapsed_time_seconds} seconds\")"
+    "y_pred = do_svm_train()"
    ]
   },
   {
@@ -874,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "id": "32daec8f-962f-44dd-893c-cbec9e4cba1f",
    "metadata": {},
    "outputs": [
@@ -882,7 +726,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7800312012480499\n"
+      "Accuracy: 0.906396255850234\n"
      ]
     }
    ],
@@ -901,10 +745,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "f037dd88-04d5-4136-af3b-4c41a46d2f7a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1-score_micro: 0.9001560062402496\n",
+      "F1-score_macro: 0.8754937839337885\n",
+      "F1-score_weighted: 0.8903155534118113\n"
+     ]
+    }
+   ],
    "source": [
     "f1_mi = f1_score(y_test, y_pred, average='micro')\n",
     "print(f'F1-score_micro: {f1_mi}')\n",
