while code cleaning

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_data_name = \"merged_support3_variance_0.2499999\" #\"merged_support3_variance_0.1\" #\"merged\" #merged_support3\n",
+    "target_data_name = \"merged_support3_variance_0.01\" #\"merged_support3_variance_0.1\" #\"merged\" #merged_support3\n",
     "target_data_file_prefix = os.path.join(preprocess_path, target_data_name) "
    ]
   },
