implemented dim_reduction using PCA before training

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_data_name = \"merged_support3_variance_0.01\" #\"merged_support3_variance_0.1\" #\"merged\" #merged_support3\n",
+    "target_data_name = \"merged_support3_variance_0.1\" #\"merged_support3_variance_0.1\" #\"merged\" #merged_support3\n",
     "target_data_file_prefix = os.path.join(preprocess_path, target_data_name) "
    ]
   },
@@ -104,12 +104,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading data from files /home/jinhyun/data/1kGP/preprocessed/merged_support3_variance_0.2499999_matrix.npy and /home/jinhyun/data/1kGP/preprocessed/merged_support3_variance_0.2499999_variant.csv\n",
-      "Read genotype array of shape (3202, 9191) and variant info dataframe of shape (9191, 4)\n",
+      "Reading data from files /home/jinhyun/data/1kGP/preprocessed/merged_support3_variance_0.1_matrix.npy and /home/jinhyun/data/1kGP/preprocessed/merged_support3_variance_0.1_variant.csv\n",
+      "Read genotype array of shape (3202, 5105448) and variant info dataframe of shape (5105448, 4)\n",
       "\n",
-      "genotype array shape (#samples, #features) : (3202, 9191)\n",
+      "genotype array shape (#samples, #features) : (3202, 5105448)\n",
       "sample annotations (#samples, ) : (3202, 9)\n",
-      "variant info dataframe (#features, ): (9191, 4)\n"
+      "variant info dataframe (#features, ): (5105448, 4)\n"
      ]
     }
    ],
@@ -125,12 +125,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Supporting sample count filtering"
+    "### Save one-hot encoding matrix"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3202, 5105448) (3202, 5105448, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "genotype_array_onehot = snp_dataset.create_onehot_genotype_array(inplace = False, batch_initialize = False)\n",
+    "print(snp_dataset.genotype_array.shape, genotype_array_onehot.shape)\n",
+    "save_numpy_array(genotype_array_onehot, os.path.join(preprocess_path, f\"{target_data_name}_matrix_onehot.npy\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Supporting sample count filtering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,32 +387,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "input array shape : (3202, 9191), (3202,). n = 10000\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jinhyun/anaconda3/envs/py39/lib/python3.9/site-packages/sklearn/feature_selection/_univariate_selection.py:776: UserWarning: k=10000 is greater than n_features=9191. All the features will be returned.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "output array shape : (3202, 9191)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_selected, perf_metrics = uni_feature_selection(X = snp_dataset.genotype_array,\n",
     "                            y = sample_annotation_df[\"Population code\"],\n",
