implemented XGB early stopping, kernelPCA for feature selection

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -104,12 +104,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading data from files /home/jinhyun/data/1kGP/preprocessed/merged_support3_variance_0.1_matrix.npy and /home/jinhyun/data/1kGP/preprocessed/merged_support3_variance_0.1_variant.csv\n",
-      "Read genotype array of shape (3202, 5105448) and variant info dataframe of shape (5105448, 4)\n",
+      "Reading data from files /home/jinhyun/data/1kGP/preprocessed/merged_random_1k_matrix.npy and /home/jinhyun/data/1kGP/preprocessed/merged_random_1k_variant.csv\n",
+      "Read genotype array of shape (3202, 1000) and variant info dataframe of shape (1000, 4)\n",
       "\n",
-      "genotype array shape (#samples, #features) : (3202, 5105448)\n",
+      "genotype array shape (#samples, #features) : (3202, 1000)\n",
       "sample annotations (#samples, ) : (3202, 9)\n",
-      "variant info dataframe (#features, ): (5105448, 4)\n"
+      "variant info dataframe (#features, ): (1000, 4)\n"
      ]
     }
    ],
@@ -137,7 +137,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3202, 5105448) (3202, 5105448, 2)\n"
+      "(3202, 1000) (3202, 1000, 2)\n",
+      "numpy array of shape (#samples, #features) : (3202, 1000, 2) -> saved to /home/jinhyun/data/1kGP/preprocessed/merged_random_1k_matrix_onehot.npy\n"
      ]
     }
    ],
